<resources>
    <string name="app_name">Pokedex</string>
    <string name="stats_detail">Stats</string>
    <string name="pokemon_name">Bulbasaur</string>
    <string name="type_grass">Grass</string>
    <string name="type_normal">Normal</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="hp">HP</string>
    <string name="attack">Attack</string>
    <string name="sp_atk">Sp. Atk</string>
    <string name="defence">Defence</string>
    <string name="sp_def">Sp. Def</string>
    <string name="speed">Speed</string>
</resources>